Bug 816726 - Return timestamp in nestegg_get_cue_point to support DASH-WebM Seeking r=kinetik