content/media/webm/WebMReader.cpp
@@ -409,7 +409,8 @@ nsresult WebMReader::ReadMetadata(VideoInfo* aInfo,
   // We can't seek in buffered regions if we have no cues.
   bool haveCues;
   int64_t dummy = -1;
-  haveCues = nestegg_get_cue_point(mContext, 0, -1, &dummy, &dummy) == 0;
+  haveCues = nestegg_get_cue_point(mContext, 0, -1, &dummy, &dummy,
+                                   (uint64_t*)&dummy) == 0;
   mDecoder->SetMediaSeekable(haveCues);
 
   *aInfo = mInfo;
